appsettings, ShowAllCars, Error Page, Release/Debug
- Added default configuration class to a project (json)
- Reworked how ShowAllCars work
- Error page added
- Added settings for release in appsettings.json

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DB": "Server=localhost;Database=AUTOSHOP;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
